--- a/static/scss/_banner.scss
+++ b/static/scss/_banner.scss
@@ -91,56 +91,10 @@
     }
 }
 
-.blog_banner {
-    min-height: 780px;
-    position: relative;
-    z-index: 1;
-    overflow: hidden;
-    margin-bottom: 0px;
-    .banner_inner {
-        background: #04091e;
-        position: relative;
-        overflow: hidden;
-        width: 100%;
-        min-height: 780px;
-        z-index: 1;
-        .overlay {
-            background: url(../img/banner/banner-2.jpg) no-repeat center center;
-            opacity: 0.5;
-            height: 125%;
-            position: absolute;
-            left: 0px;
-            top: 0px;
-            width: 100%;
-            z-index: -1;
-        }
-        .blog_b_text {
-            max-width: 700px;
-            margin: auto;
-            color: #fff;
-            margin-top: 40px;
-            h2 {
-                font-size: 60px;
-                font-weight: 500;
-                font-family: $primary-font;
-                line-height: 66px;
-                margin-bottom: 15px;
-            }
-            p {
-                font-size: 16px;
-                margin-bottom: 35px;
-            }
-            #ffffff_bg_btn {
-                line-height: 42px;
-                padding: 0px 45px;
-            }
-        }
-    }
-}
 
 .banner_area {
     position: relative;
-    background: url(../img/banner/banner.jpg) no-repeat center center;
+    background: url(/images/banner.jpg) no-repeat center center;
     z-index: 1;
     min-height: 392px;
     padding-top: 0 !important;
