--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -28,7 +28,7 @@
 								{% endfor %}
 									
 							{% else %}
-								<li> There are no questions </li>
+								<strong> There are no questions </strong>
 							{% endif %}
 							</ul>
 								</div>
