--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -8,15 +8,16 @@
 {% block body_block%}
 <div class="container">
 <br />
-    <h1>Register</h1>
+    <h3>Register</h3>
     <form method="post" action=".">
         {% csrf_token %}
 
         {{ form.as_p }}
 
-        <input type="submit" value="Register">
+        <input class="btn btn-primary" type="submit" value="Register">
 
     </form>
+    <p></p>
     <a href="{% url 'main:index' %}">Return to index</a>
     <br />
 </div>
