--- a/templates/main/lecture.html
+++ b/templates/main/lecture.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+
+{% load staticfiles %}
+
 <html>
 <head>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -27,10 +30,17 @@
                  <div class="pl-5 pt-3" id="{{ question.id }}">
                     <h2>{{ question.title }} </h2>
                     <p>{{ question.question }}</p>
-                    <button type="button" class="btn btn-primary mb-2">Upvote</button> &nbsp &nbsp Votes: &nbsp
+
+<!--                     upvote button and votes-->
+                    <button type="button"
+                            class="btn btn-primary mb-2 upvote"
+                            id="upvote-{{ question.id }}"
+                            data-questionid="{{ question.id }}">
+                        Upvote
+                    </button> &nbsp &nbsp Votes: &nbsp
                      {% for title, count in upvote_dict.items %}
                         {% if title == question.title %}
-                            {{ count }}<br/>
+                            <div class="upvotes" id="count-{{ question.id }}">{{ count }}</div><br/>
                         {% endif %}
                      {% endfor %}
                  </div>
@@ -89,8 +99,9 @@
 
 </div>
 
-
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="{% static 'js/jquery-3.3.1.min.js' %}" crossorigin="anonymous"></script>
+<script src="{% static 'js/upvote-ajax.js' %}" crossorigin="anonymous"></script>
+<!--<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>-->
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
