Added base template to lecture page

--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -24,6 +24,8 @@
 	<link rel="stylesheet" href="{% static 'vendors/animate-css/animate.css' %}">
 	<!-- main css -->
 	<link rel="stylesheet" href="{% static '/css/style.css' %}">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/lecture.css' %}">
 </head>
 
 <body>
@@ -127,6 +129,9 @@
 	<script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script>
 	<script src="{% static 'vendors/counter-up/jquery.counterup.js' %}"></script>
 	<script src="{% static 'js/mail-script.js' %}"></script>
+	<script src="{% static 'js/jquery-3.3.1.min.js' %}" crossorigin="anonymous"></script>
+	<script src="{% static 'js/upvote-ajax.js' %}" crossorigin="anonymous"></script>
+	<script src="{% static 'js/lecture-jquery.js' %}" crossorigin="anonymous"></script>
 </body>
 
 </html>
