--- a/static/css/lecture.css
+++ b/static/css/lecture.css
@@ -3,3 +3,14 @@
 
 /* Color for lecturer replies */
 .lightgray{background-color: gainsboro;}
+
+/* force white text */
+.lecturetitle{
+    color: white;
+    font-size: 32pt;
+}
+
+.questiontitle{
+    color: white;
+    font-size: 20pt;
+}
