--- a/templates/main/update_user.html
+++ b/templates/main/update_user.html
@@ -27,7 +27,11 @@
                     
                 </form>
             </p>
+            <a href="{% url 'main:delete_user' %}"><button class="btn btn-primary">Delete Account</button> </a>
+            <p></p>
             <a href="{% url 'main:profile' %}"><button class="btn btn-primary">Cancel</button> </a>
+
+
         </div>
     
 
