--- a/templates/main/courses.html
+++ b/templates/main/courses.html
@@ -42,18 +42,15 @@
                 </div>
             </div>
             <div class="row">
-                <!-- single course -->
+                <!-- course -->
                 <div class="col-lg-3 col-md-6">
                     <div class="single_course">
                         <div class="course_head overlay">
                               <img class="img-fluid w-100" src="{% static 'images/trainer1.jpg' %}" alt="">
-                            <div class="authr_meta">
-                                <span>Professor Jameson</span>
-                            </div>
                         </div>
                         <div class="course_content">
 						<div>
-						{% if course %}
+						{% if courses %}
                             <h4> {{course.name}} </h4>
 							{% if courses %}
 							<ul>
@@ -70,98 +67,11 @@
                         </div>
                     </div>
                 </div>
-                <!-- single course -->
-                <div class="col-lg-3 col-md-6">
-                    <div class="single_course">
-                        <div class="course_head overlay">
-                            <img class="img-fluid w-100" src="{% static 'images/trainer1.jpg' %}" alt="">
-                            <div class="authr_meta">
-                                <span>Dr K.Mackenzie</span>
-                            </div>
-                        </div>
-                        <div class="course_content">
-                            <h4>
-                                <a href="course-details.html">Internet Technology</a>
-                            </h4>
-                            
-                            <div class="course_meta d-flex justify-content-between">
-                                <div>
-                                    <span class="meta_info">
-                                        <a href="#">
-                                            <i class="lnr lnr-user"></i>355
-                                        </a>
-                                    </span>
-                                    <span class="meta_info"><a href="#">
-                                            <i class="lnr lnr-bubble"></i>35
-                                        </a></span>
-                                </div>
-                                
+           
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- single course -->
-                <div class="col-lg-3 col-md-6">
-                    <div class="single_course">
-                        <div class="course_head overlay">
-                           <img class="img-fluid w-100" src="{% static 'images/trainer1.jpg' %}" alt="">
-                            <div class="authr_meta">
-                                <span>Professor P.Andrews</span>
-                            </div>
-                        </div>
-                        <div class="course_content">
-                            <h4>
-                                <a href="course-details.html">Crytopgraphy</a>
-                            </h4>
-                            
-                            <div class="course_meta d-flex justify-content-between">
-                                <div>
-                                    <span class="meta_info">
-                                        <a href="#">
-                                            <i class="lnr lnr-user"></i>355
-                                        </a>
-                                    </span>
-                                    <span class="meta_info"><a href="#">
-                                            <i class="lnr lnr-bubble"></i>35
-                                        </a></span>
-                                </div>
-                                
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- single course -->
-                <div class="col-lg-3 col-md-6">
-                    <div class="single_course">
-                        <div class="course_head overlay">
-                            <img class="img-fluid w-100" src="{% static 'images/trainer1.jpg' %}" alt="">
-                            <div class="authr_meta">
-                                <span>Dr L.Matthews</span>
-                            </div>
-                        </div>
-                        <div class="course_content">
-                            <h4>
-                                <a href="course-details.html">Machine Learning</a>
-                            </h4>
-                           
-                            <div class="course_meta d-flex justify-content-between">
-                                <div>
-                                    <span class="meta_info">
-                                        <a href="#">
-                                            <i class="lnr lnr-user"></i>355
-                                        </a>
-                                    </span>
-                                    <span class="meta_info"><a href="#">
-                                            <i class="lnr lnr-bubble"></i>35
-                                        </a></span>
-                                </div>
-                                
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    
 	{% endblock %}
     
