--- a/templates/main/create_lecture.html
+++ b/templates/main/create_lecture.html
@@ -8,16 +8,11 @@
 
 {% block body_block %}
     <div>
-        <form id="lectureForm" method="POST" action="{% url 'main:create_lecture' course.slug %}">
+        <h1>Create Lecture</h1>
+        <form method="POST" action="{% url 'main:create_lecture' course.slug %}">
             {% csrf_token %}
-            {% for hidden in form.hidden_fields %}
-                {{ hidden }}
-            {% endfor %}
-            {% for field in form.visible_fields %}
-                {{ field.erros }}
-                {{ field.help_text }}
-                {{ field }}
-            {% endfor %}
+            
+            {{ form.as_p }}
             <input type="submit" name="submit" value="Create Lecture" />
         </form>
     </div>
