Added form to add replies to questions

--- a/templates/main/lecture.html
+++ b/templates/main/lecture.html
@@ -69,7 +69,7 @@ Profile
                 <h5>Write Reply</h5>
                 <form id="reply_form-{{question.id}}"
                       method="post"
-                      action="course/<slug:course_name_slug>/<slug:lecture_name_slug>/<slug:question_name_slug>/create_reply">
+                      action="/main/course/{{ course.slug }}/{{ lecture.slug }}/{{ question.slug }}/create_reply/">
                     {% csrf_token %}
                     {% for hidden in reply_form.hidden_fields %}
                         {{ hidden }}
@@ -92,10 +92,7 @@ Profile
             <div class="row lightgray text-dark rounded pl-5 pt-3 pb-3 pr-5 showreplies"
                  id="showreplies-{{ question.id }}"
                      data-questionid="{{ question.id }}">
-<!--                <div class="pb-2 pt-2 showreplies"-->
-<!--                     id="showreplies-{{ question.id }}"-->
-<!--                     data-questionid="{{ question.id }}">-->
-                    <h5> Answer:</h5>
+                    <div><h5> Answer:</h5></div>
                 <div class="hidden replies-{{ question.id }}">{{ reply.reply }}</div><br/>
             </div>
              <div class="row bg-white text-white rounded pl-5 pt-2 pb-2">
