--- a/templates/main/courses.html
+++ b/templates/main/courses.html
@@ -40,33 +40,29 @@
                     </div>
                 </div>
             </div>
+
             <div class="row">
                 <!-- course -->
                 <div class="col-lg-3 col-md-6">
+                    {% if courses %}
+                    {% for course in courses %}
                     <div class="single_course">
                         <div class="course_head overlay">
                               <img class="img-fluid w-100" src="{% static 'images/trainer1.jpg' %}" alt="">
                         </div>
                         <div class="course_content">
-						<div>
-						{% if courses %}
-							<ul>
-							{% for course in courses %}
-							 <li><a href="{% url 'main:courses' %}">{{course.name}}</a></li>
-							 {% endfor %}
-							</ul>
-							<strong> No course to display </strong>
-						{% else %}	
-					       The specified course does not exist
-						{% endif %}
+                            <a href="{% url 'main:course' course.slug %}">{{course.name}}</a>
+                            <p>{{ course.bio }}</p>
                         </div>
                     </div>
+
                 </div>
-           
-                            </div>
-                        </div>
-                    </div>
-                </div>
-    
+                {% endfor %}
+                {% endif %}
+            </div>
+        </div>
+    </div>
+
+
 	{% endblock %}
     
