Added author to questions in lecture.html

--- a/static/css/lecture.css
+++ b/static/css/lecture.css
@@ -14,3 +14,13 @@
     color: white;
     font-size: 20pt;
 }
+
+.questioncontent{
+    color: white;
+    font-size: 16pt;
+}
+
+.questionauthor{
+    color: white;
+    font-size: 12pt;
+}
